<?xml version="1.0" encoding="utf-8"?>

<!-- Для создания макета клавиатуры калькулятора я выбрал Сonstraintlayout
     так как посчитал что он более универсален (гибок) для внесения изменений,
     если они портебуются в дальнейшем. Для простоты можно было использовать
      GridLayout.-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp">

    <TextView
        android:id="@+id/screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#673AB7"
        android:gravity="right"
        android:text="@string/key_0"
        android:textColor="@color/white"
        android:textSize="40sp"

        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="@id/key_perc"
        app:layout_constraintRight_toRightOf="@id/key_clear"
        app:layout_constraintTop_toTopOf="parent"

        tools:ignore="RtlHardcoded">
        <!--Почему студия просит добавить этот атрибут ? -->

    </TextView>

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/key_0"

        android:src="@drawable/back_1"
        app:layout_constraintBottom_toBottomOf="@id/screen"
        app:layout_constraintLeft_toLeftOf="@id/screen"
        app:layout_constraintRight_toRightOf="@id/screen"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <Button
        android:id="@+id/key_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_7"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_8"
        app:layout_constraintTop_toBottomOf="@id/key_perc">

    </Button>

    <Button
        android:id="@+id/key_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_8"

        app:layout_constraintLeft_toRightOf="@id/key_7"
        app:layout_constraintRight_toLeftOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_mult">

    </Button>

    <Button
        android:id="@+id/key_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_9"

        app:layout_constraintLeft_toRightOf="@id/key_8"
        app:layout_constraintRight_toLeftOf="@id/key_diff"
        app:layout_constraintTop_toBottomOf="@id/key_div">

    </Button>

    <Button
        android:id="@+id/key_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_4"

        app:layout_constraintLeft_toLeftOf="@id/key_7"
        app:layout_constraintRight_toRightOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@id/key_7">

    </Button>

    <Button
        android:id="@+id/key_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_5"

        app:layout_constraintLeft_toLeftOf="@id/key_8"
        app:layout_constraintRight_toRightOf="@id/key_8"
        app:layout_constraintTop_toBottomOf="@id/key_8">

    </Button>

    <Button
        android:id="@+id/key_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_6"

        app:layout_constraintLeft_toLeftOf="@id/key_9"
        app:layout_constraintRight_toRightOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_9">

    </Button>

    <Button
        android:id="@+id/key_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_1"

        app:layout_constraintLeft_toLeftOf="@id/key_4"
        app:layout_constraintRight_toRightOf="@id/key_4"
        app:layout_constraintTop_toBottomOf="@id/key_4">

    </Button>

    <Button
        android:id="@+id/key_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_2"

        app:layout_constraintLeft_toLeftOf="@id/key_5"
        app:layout_constraintRight_toRightOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_5">

    </Button>

    <Button
        android:id="@+id/key_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_3"

        app:layout_constraintLeft_toLeftOf="@id/key_6"
        app:layout_constraintRight_toRightOf="@id/key_6"
        app:layout_constraintTop_toBottomOf="@id/key_6">

    </Button>

    <Button
        android:id="@+id/key_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_0"

        app:layout_constraintLeft_toLeftOf="@id/key_1"
        app:layout_constraintRight_toRightOf="@id/key_2"
        app:layout_constraintTop_toBottomOf="@id/key_1">

    </Button>

    <Button
        android:id="@+id/key_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_dot"

        app:layout_constraintLeft_toLeftOf="@id/key_3"
        app:layout_constraintRight_toRightOf="@id/key_3"
        app:layout_constraintTop_toBottomOf="@id/key_3">

    </Button>

    <Button
        android:id="@+id/key_res"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/key_res"

        app:layout_constraintBottom_toBottomOf="@id/key_dot"
        app:layout_constraintLeft_toLeftOf="@id/key_sum"
        app:layout_constraintRight_toRightOf="@id/key_sum"
        app:layout_constraintTop_toTopOf="@id/key_3">

    </Button>

    <Button
        android:id="@+id/key_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_sum"

        app:layout_constraintLeft_toLeftOf="@id/key_diff"
        app:layout_constraintRight_toRightOf="@id/key_diff"
        app:layout_constraintTop_toBottomOf="@id/key_diff">

    </Button>

    <Button
        android:id="@+id/key_diff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_diff"

        app:layout_constraintLeft_toRightOf="@id/key_9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_clear">

    </Button>

    <Button
        android:id="@+id/key_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_div"

        app:layout_constraintLeft_toLeftOf="@id/key_9"
        app:layout_constraintRight_toRightOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/screen">

    </Button>

    <Button
        android:id="@+id/key_mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_mult"

        app:layout_constraintLeft_toLeftOf="@id/key_8"
        app:layout_constraintRight_toRightOf="@id/key_8"
        app:layout_constraintTop_toBottomOf="@id/screen">

    </Button>

    <Button
        android:id="@+id/key_perc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_perc"

        app:layout_constraintLeft_toLeftOf="@id/key_7"
        app:layout_constraintRight_toRightOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@id/screen">

    </Button>

    <Button
        android:id="@+id/key_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_clear"

        app:layout_constraintLeft_toLeftOf="@id/key_diff"
        app:layout_constraintRight_toRightOf="@id/key_diff"
        app:layout_constraintTop_toBottomOf="@id/screen">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>